--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
     <!-- a id="skip-to-content" href="#content">Skip to the content.</a -->
 
     <header class="page-header" role="banner">
-      <h1 class="project-name"><img src="https://avatars.githubusercontent.com/u/89421602?s=200&v=4"></img><br></br>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
+      <img src="https://avatars.githubusercontent.com/u/89421602?s=200&v=4"></img><br></br>
+      <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.show_downloads %}
         <a href="{{ site.github.zip_url }}" class="btn">Download .zip</a>
